update to show new bot

--- a/index.html
+++ b/index.html
@@ -22,13 +22,16 @@
 
 <body>
     <h1>Test Utterances Collector</h1>
-    <script src="https://cdn.cai.tools.sap/webchat/webchat.js" channelId="b4fa70dd-9832-4676-beed-baa97673b6b3"
-        token="a007f5464aa025b87d6ac1cce2d66604" apiRoot="https://api.cai.tools.sap" id="cai-webchat">
+
+    <script src="https://cdn.cai.tools.sap/webchat/webchat.js" channelId="bb079da6-8d51-4592-a681-81ee1a96dcfc"
+        token="f28a8e9f21dfa7f827d8ceec1085c5d7" apiRoot="https://api.cai.tools.sap"
+        id="cai-webchat">
         </script>
     <script>
         checkElement('.RecastAppExpander').then((selector) => {
             $(".RecastAppExpander").hide()
             $(".RecastAppExpander").click()
+            $(".RecastAppExpander").show()
         });
     </script>
 
